# LMeterX

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README_CN.md  docker-compose.dev.yml  docker-compose.yml  init_db.sql  quick-start.sh
.openclaw/: env.example
backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.base  app.py  requirements-dev.txt  requirements.txt
backend/api/: api_analysis.py  api_auth.py  api_collection.py  api_common_task.py  api_http_task.py  api_llm_task.py  api_log.py  api_monitoring.py  api_skill.py  api_task.py  api_upload.py
backend/db/: db_config.py  mysql.py
backend/middleware/: auth_middleware.py  db_middleware.py
backend/model/: analysis.py  auth.py  collection.py  common_task.py  http_task.py  llm_task.py  log.py  skill.py  system.py  task.py
backend/service/: analysis_service.py  auth_service.py  collection_service.py  common_task_service.py  http_task_service.py  llm_task_service.py  log_service.py  monitoring_service.py  skill_service.py  system_service.py  task_service.py  upload_service.py
backend/tests/: __init__.py  (+19 more)
data/: comprehensive_self-build.jsonl  vision_self-built.jsonl
docs/: DATASET_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_CN.md
frontend/: .env.development  .env.production  Dockerfile  default-k8s.conf  default.conf  entrypoint.sh  index.html  package-lock.json  package.json  test.tsx
mysql/: Dockerfile
skills/: README.md  __init__.py  mcp_server.py  pyproject.toml
st_engine/: .dockerignore  .flake8  Dockerfile  Dockerfile.base  app.py  mypy.ini  pyproject.toml  requirements.txt
(+162 files in other folders)
