[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmeterx-skills"
version = "2.0.0"
description = "LMeterX Agent Skills — MCP server for AI agent integration"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.scripts]
lmeterx-mcp = "skills.mcp_server:main"
